Made so that u can click the button "vis biler"  that shows list and u can click on a specific item in the list item

--- a/QrAuto/QrAuto.csproj
+++ b/QrAuto/QrAuto.csproj
@@ -53,6 +53,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="EasyConveyor" Version="1.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="ShowCar.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
