Made so you can post a car in the app

--- a/QrAuto/QrAuto.csproj
+++ b/QrAuto/QrAuto.csproj
@@ -58,6 +58,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="AddCar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ShowCar.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
