--- a/QrAuto/QrAuto.csproj
+++ b/QrAuto/QrAuto.csproj
@@ -61,12 +61,21 @@
 	  <MauiXaml Update="AddCar.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="CarMap.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ShowCar.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="ShowCars.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-android'">
+	  <PackageReference Include="Xamarin.Google.Android.Material">
+	    <Version>1.6.0</Version>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
